# gsdc-iic-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gsdc-iic-example.code-workspace  sdkconfig
components/configuration_file/: CMakeLists.txt  configuration_file.c
components/configuration_file/include/: configuration_file.h
components/esp_includes/: CMakeLists.txt
components/esp_includes/include/: esp_logging.h  esp_system_includes.h  esp_vfs.h
components/iic/: CMakeLists.txt  Kconfig  iic_client.c  iic_common.c  iic_configuration.c  iic_master.c  iic_receiver.c  iic_transmission.c  master.c
components/iic/include/: gsdc_iic_client.h  gsdc_iic_common.h  gsdc_iic_configuration.h  gsdc_iic_master.h  gsdc_iic_receiver.h  gsdc_iic_transmisson.h  iic_common.h  iic_configuration.h  iic_receiver.h  iic_transmisson.h  master_task.h  receiver_task.h
components/led_controller/: CMakeLists.txt  Kconfig  led_controller.c
components/led_controller/include/: led_controller.h
components/spiffs_file/: CMakeLists.txt  Kconfig  spiffs_file.c
components/spiffs_file/include/: spiffs_file.h
main/: CMakeLists.txt  Kconfig.projbuild  iic_example.cpp  main.c  main.cpp
main/include/: iic_example.h  main.h
partition_table/: partitionTable.csv  partitions.csv
partition_table/file_sysytem/: iic.cfg
